[gd_scene load_steps=4 format=3 uid="uid://4x05en7775be"]

[ext_resource type="Script" path="res://game/player/player.gd" id="1_ujfyd"]
[ext_resource type="PackedScene" uid="uid://hg18gg240e5y" path="res://game/player/wariror/warrior_player.tscn" id="2_bifh8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gs0vq"]
size = Vector3(1, 5.46557, 1)

[node name="player" type="RigidBody3D"]
lock_rotation = true
script = ExtResource("1_ujfyd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0894017, 2.24901, 0)
shape = SubResource("BoxShape3D_gs0vq")

[node name="warrior_player" parent="." instance=ExtResource("2_bifh8")]
transform = Transform3D(-0.961808, 0, -0.273724, 0, 1, 0, 0.273724, 0, -0.961808, 0, -5.44018, 0)

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 0.924546, 0.38107, 0, -0.38107, 0.924546, 0, 5.89852, 5.86078)
current = true

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
