[gd_scene load_steps=5 format=3 uid="uid://cslb0o3sfrtxr"]

[ext_resource type="Script" path="res://server.gd" id="1_crkq6"]
[ext_resource type="Script" path="res://start_window.gd" id="2_qbupm"]
[ext_resource type="Script" path="res://database/db.gd" id="3_7s2q5"]
[ext_resource type="Script" path="res://player/player.gd" id="4_8jm6x"]

[node name="Mietek" type="Node"]

[node name="server" type="Node" parent="."]
script = ExtResource("1_crkq6")

[node name="start_window" type="Node" parent="."]
script = ExtResource("2_qbupm")

[node name="database" type="Node" parent="."]
script = ExtResource("3_7s2q5")

[node name="Game" type="Node" parent="."]

[node name="player" type="Node" parent="Game"]
script = ExtResource("4_8jm6x")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="players_logged" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/players_logged"]
layout_mode = 2
text = "Logged players"

[node name="HSeparator" type="HSeparator" parent="ColorRect/HBoxContainer/players_logged"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="ColorRect/HBoxContainer"]
layout_mode = 2

[node name="players_in_game" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/players_in_game"]
layout_mode = 2
text = "Players in game
"

[node name="HSeparator" type="HSeparator" parent="ColorRect/HBoxContainer/players_in_game"]
layout_mode = 2
